--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
   </head>
   <body class="bg-blue-400 h-screen grid place-items-center">
     <main class="bg-white flex flex-col text-center h-72 w-72">
-      <h1 class="text-2xl font-bold my-6">SimpleStorage Dapp</h1>
+      <h1 class="text-2xl font-bold my-2">SimpleStorage Dapp</h1>
+      <button class="bg-green-600 text-white w-24 mx-auto">Connect</button>
       <label for="store">Store:</label>
       <input
         type="text"
@@ -17,10 +18,11 @@
         id="store"
         class="border-blue-500 border w-48 mx-auto"
       />
-      <button class="bg-blue-500 border w-48 mx-auto my-3 py-2">
+      <button class="bg-blue-500 border w-48 mx-auto my-3 py-2 text-white">
         Retrieve
       </button>
       <p id="retrive" class="border border-black w-48 h-8 mx-auto"></p>
     </main>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
