--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,10 @@
       </button>
       <label for="store">Store:</label>
       <input
-        type="text"
+        type="number"
         name="store"
         id="store"
-        class="border-blue-500 border w-48 mx-auto"
+        class="border-blue-500 border w-48 mx-auto text-center"
       />
       <button
         class="bg-blue-500 border w-48 mx-auto mt-2 py-2 text-white"
@@ -27,10 +27,16 @@
       >
         Store
       </button>
-      <button class="bg-purple-500 border w-48 mx-auto my-2 py-2 text-white">
+      <button
+        class="bg-purple-500 border w-48 mx-auto my-2 py-2 text-white"
+        id="retrieve"
+      >
         Retrieve
       </button>
-      <p id="retrive" class="border border-black w-48 h-8 mx-auto"></p>
+      <p
+        id="showFavoriteNumber"
+        class="border border-black w-48 h-8 mx-auto border-dashed"
+      ></p>
     </main>
   </body>
 </html>
